# SpaceTraveler

./: .gitignore  README.md  bun.lockb  next.config.mjs  package.json
app/routes/: _index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app.rs  main.rs
src-tauri/src/blazzy_client/: mod.rs
src-tauri/src/blazzy_runner/: mod.rs
src-tauri/src/config_manager/: mod.rs
src-tauri/src/meilisearch_runner/: runner.rs
src-tauri/src/starship_plugin_api/: Cargo.toml
src-tauri/src/starship_plugin_api/src/: lib.rs
src-tauri/src/starship_plugin_api/src/api/: mod.rs
src-tauri/src/starship_plugin_api/src/plugin_config/: mod.rs
src-tauri/src/tasker/: mod.rs
src-tauri/src/ws_connector/: mod.rs
