[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["src/starship_plugin_api"]

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.5", features = [] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "process", "io-std"] }
meilisearch-sdk = "0.27.0"
tempfile = "3.10.1"
passwords = "3.1.16"
send_wrapper = "0.6.0"
ctrlc-async = { version = "3.2.2", features = ["termination"] }
atomic_refcell = "0.1.13"
sysinfo = "0.30.13"
whoami = "1.5.1"
walkdir = "2.5.0"
chrono = "0.4.38"
toml = { version = "0.8.15", features = ["parse", "default"] }
futures = "0.3.30"
starship_plugin_api = {path = "src/starship_plugin_api" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
